# CI_Compatison

./: CMakeLists.txt  Jenkinsfile  jenkinsfile  main.cpp  test.cpp  test.hpp
.circleci/: config.yml
.teamcity/BradleyTestProject/: project-config.xml
.teamcity/BradleyTestProject/buildTypes/: BradleyTestProject_Build.xml  BradleyTestProject_Build2.xml  BradleyTestProject_LinuxBuild1.xml  BradleyTestProject_LinuxBuild2.xml  BradleyTestProject_LinuxBuild3.xml  BradleyTestProject_LinuxBuild4.xml
.teamcity/BradleyTestProject/vcsRoots/: BradleyTestProject_HttpsGithubComBradley01429ciCompatisonRefsHeadsMain.xml
